src/snapshots/test_lex__lex::test_lex::number_assignment-5.snap
---
created: "2019-03-08T08:00:28.157266Z"
creator: insta@0.7.1
source: src/lex.rs
expression: actual
---
[
    Token {
        kind: Ident(
            "x"
        ),
        span: Span {
            start: 0,
            end: 1
        }
    },
    Token {
        kind: Assign,
        span: Span {
            start: 2,
            end: 3
        }
    },
    Token {
        kind: Unknown(
            "5.40."
        ),
        span: Span {
            start: 4,
            end: 9
        }
    }
]
