src/snapshots/test_lex__lex::test_lex::number_assignment.snap
---
created: "2019-03-08T07:58:51.500526Z"
creator: insta@0.7.1
source: src/lex.rs
expression: actual
---
[
    Token {
        kind: Ident(
            "x"
        ),
        span: Span {
            start: 0,
            end: 1
        }
    },
    Token {
        kind: Assign,
        span: Span {
            start: 2,
            end: 3
        }
    },
    Token {
        kind: Number(
            15.0
        ),
        span: Span {
            start: 4,
            end: 6
        }
    }
]
