src/snapshots/test_lex__lex::test_lex::repeat_loop.snap
---
created: "2019-03-08T07:47:25.427284Z"
creator: insta@0.7.1
source: src/lex.rs
expression: actual
---
[
    Token {
        kind: NewLine,
        span: Span {
            start: 0,
            end: 1
        }
    },
    Token {
        kind: Ident(
            "n"
        ),
        span: Span {
            start: 9,
            end: 10
        }
    },
    Token {
        kind: Assign,
        span: Span {
            start: 11,
            end: 12
        }
    },
    Token {
        kind: Number(
            100.0
        ),
        span: Span {
            start: 13,
            end: 16
        }
    },
    Token {
        kind: NewLine,
        span: Span {
            start: 16,
            end: 17
        }
    },
    Token {
        kind: Repeat,
        span: Span {
            start: 25,
            end: 31
        }
    },
    Token {
        kind: NewLine,
        span: Span {
            start: 31,
            end: 32
        }
    },
    Token {
        kind: Ident(
            "print"
        ),
        span: Span {
            start: 44,
            end: 49
        }
    },
    Token {
        kind: LParen,
        span: Span {
            start: 49,
            end: 50
        }
    },
    Token {
        kind: Ident(
            "n"
        ),
        span: Span {
            start: 50,
            end: 51
        }
    },
    Token {
        kind: RParen,
        span: Span {
            start: 51,
            end: 52
        }
    },
    Token {
        kind: NewLine,
        span: Span {
            start: 52,
            end: 53
        }
    },
    Token {
        kind: Ident(
            "n"
        ),
        span: Span {
            start: 65,
            end: 66
        }
    },
    Token {
        kind: Assign,
        span: Span {
            start: 67,
            end: 68
        }
    },
    Token {
        kind: Ident(
            "n"
        ),
        span: Span {
            start: 69,
            end: 70
        }
    },
    Token {
        kind: Minus,
        span: Span {
            start: 71,
            end: 72
        }
    },
    Token {
        kind: Number(
            1.0
        ),
        span: Span {
            start: 73,
            end: 74
        }
    },
    Token {
        kind: NewLine,
        span: Span {
            start: 74,
            end: 75
        }
    },
    Token {
        kind: Until,
        span: Span {
            start: 83,
            end: 88
        }
    },
    Token {
        kind: Ident(
            "n"
        ),
        span: Span {
            start: 89,
            end: 90
        }
    },
    Token {
        kind: EQ,
        span: Span {
            start: 91,
            end: 93
        }
    },
    Token {
        kind: Number(
            0.0
        ),
        span: Span {
            start: 94,
            end: 95
        }
    }
]
