src/snapshots/test_lex__lex::test_lex::table_with_calculated_keys.snap
---
created: "2019-03-08T07:47:25.464127Z"
creator: insta@0.7.1
source: src/lex.rs
expression: actual
---
[
    Token {
        kind: Ident(
            "x"
        ),
        span: Span {
            start: 0,
            end: 1
        }
    },
    Token {
        kind: Assign,
        span: Span {
            start: 2,
            end: 3
        }
    },
    Token {
        kind: LCurly,
        span: Span {
            start: 4,
            end: 5
        }
    },
    Token {
        kind: LBracket,
        span: Span {
            start: 5,
            end: 6
        }
    },
    Token {
        kind: String(
            "bar"
        ),
        span: Span {
            start: 6,
            end: 11
        }
    },
    Token {
        kind: RBracket,
        span: Span {
            start: 11,
            end: 12
        }
    },
    Token {
        kind: Assign,
        span: Span {
            start: 13,
            end: 14
        }
    },
    Token {
        kind: String(
            "bar"
        ),
        span: Span {
            start: 15,
            end: 20
        }
    },
    Token {
        kind: Comma,
        span: Span {
            start: 20,
            end: 21
        }
    },
    Token {
        kind: LBracket,
        span: Span {
            start: 22,
            end: 23
        }
    },
    Token {
        kind: Number(
            1.5
        ),
        span: Span {
            start: 23,
            end: 26
        }
    },
    Token {
        kind: RBracket,
        span: Span {
            start: 26,
            end: 27
        }
    },
    Token {
        kind: Assign,
        span: Span {
            start: 28,
            end: 29
        }
    },
    Token {
        kind: String(
            "foo"
        ),
        span: Span {
            start: 30,
            end: 35
        }
    },
    Token {
        kind: Comma,
        span: Span {
            start: 35,
            end: 36
        }
    },
    Token {
        kind: LBracket,
        span: Span {
            start: 37,
            end: 38
        }
    },
    Token {
        kind: LCurly,
        span: Span {
            start: 38,
            end: 39
        }
    },
    Token {
        kind: RCurly,
        span: Span {
            start: 39,
            end: 40
        }
    },
    Token {
        kind: RBracket,
        span: Span {
            start: 40,
            end: 41
        }
    },
    Token {
        kind: Assign,
        span: Span {
            start: 42,
            end: 43
        }
    },
    Token {
        kind: False,
        span: Span {
            start: 44,
            end: 49
        }
    },
    Token {
        kind: RCurly,
        span: Span {
            start: 49,
            end: 50
        }
    }
]
