src/snapshots/test_lex__lex::test_lex::table_with_keys.snap
---
created: "2019-03-08T07:47:25.474577Z"
creator: insta@0.7.1
source: src/lex.rs
expression: actual
---
[
    Token {
        kind: Ident(
            "x"
        ),
        span: Span {
            start: 0,
            end: 1
        }
    },
    Token {
        kind: Assign,
        span: Span {
            start: 2,
            end: 3
        }
    },
    Token {
        kind: LCurly,
        span: Span {
            start: 4,
            end: 5
        }
    },
    Token {
        kind: Ident(
            "foo"
        ),
        span: Span {
            start: 5,
            end: 8
        }
    },
    Token {
        kind: Assign,
        span: Span {
            start: 9,
            end: 10
        }
    },
    Token {
        kind: String(
            "foo"
        ),
        span: Span {
            start: 11,
            end: 16
        }
    },
    Token {
        kind: Comma,
        span: Span {
            start: 16,
            end: 17
        }
    },
    Token {
        kind: Ident(
            "bar"
        ),
        span: Span {
            start: 18,
            end: 21
        }
    },
    Token {
        kind: Assign,
        span: Span {
            start: 22,
            end: 23
        }
    },
    Token {
        kind: False,
        span: Span {
            start: 24,
            end: 29
        }
    },
    Token {
        kind: RCurly,
        span: Span {
            start: 29,
            end: 30
        }
    }
]
