src/snapshots/test_lex__lex::test_lex::varargs.snap
---
created: "2019-03-08T07:47:25.511619Z"
creator: insta@0.7.1
source: src/lex.rs
expression: actual
---
[
    Token {
        kind: NewLine,
        span: Span {
            start: 0,
            end: 1
        }
    },
    Token {
        kind: Function,
        span: Span {
            start: 9,
            end: 17
        }
    },
    Token {
        kind: Ident(
            "foo"
        ),
        span: Span {
            start: 18,
            end: 21
        }
    },
    Token {
        kind: LParen,
        span: Span {
            start: 21,
            end: 22
        }
    },
    Token {
        kind: Dots,
        span: Span {
            start: 22,
            end: 25
        }
    },
    Token {
        kind: RParen,
        span: Span {
            start: 25,
            end: 26
        }
    },
    Token {
        kind: NewLine,
        span: Span {
            start: 26,
            end: 27
        }
    },
    Token {
        kind: Return,
        span: Span {
            start: 39,
            end: 45
        }
    },
    Token {
        kind: Dots,
        span: Span {
            start: 46,
            end: 49
        }
    },
    Token {
        kind: NewLine,
        span: Span {
            start: 49,
            end: 50
        }
    },
    Token {
        kind: End,
        span: Span {
            start: 58,
            end: 61
        }
    }
]
